<resources>
    <string name="app_name">test</string>
    <string name="ko_input_email">이메일을 입력하세요</string>
    <string name="ko_get_mail">인증번호받기</string>
    <string name="ko_input_id">아이디를 입력하세요</string>
    <string name="ko_input_password">비밀번호를 입력하세요</string>
    <string name="ko_join">회원가입</string>
    <string name="ko_done_join">회원 가입 완료</string>
    <string name="ko_input_code">인증 번호를 입력하세요</string>
</resources>