<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/codeEditText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="48dp"
            android:background="@color/black"
            android:hint="@string/ko_input_email"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginEnd="5dp"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sendCheckEmailBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sendCheckEmailBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/ko_get_mail"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/emailEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/emailEditText"
            app:layout_constraintTop_toTopOf="@id/emailEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/codeEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/black"
        android:hint="@string/ko_input_code"
        android:padding="10dp"
        android:autofillHints="name"
        android:inputType="none"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/usernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailWrapper" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/black"
        android:hint="@string/ko_input_id"
        android:padding="10dp"
        android:autofillHints="name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/black"
        android:hint="@string/ko_input_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/passwordCheckEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <EditText
        android:id="@+id/passwordCheckEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/black"
        android:hint="@string/ko_input_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/joinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <Button
        android:id="@+id/joinButton"
        android:layout_width="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="48dp"
        android:text="@string/ko_join"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordCheckEditText"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/doneMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/joinButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ko_done_join"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>